# prime9k

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
src/: application.py  compute.py  compute_base.py  compute_cpu.py  compute_gpu.py  main.py
src/compute/: compute_cpu.py  compute_gpu.py
tests/: test_composites.py  test_composites_cpu.py  test_composites_gpu.py  test_primes.py  test_primes_cpu.py  test_primes_gpu.py
tests/common/: generators.py
tests/lists/: composites.py  primes.py
utils/: generate_composites.py  generate_primes.py
