[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prime-tester-9000"
version = "0.1.0"
description = "A GPU-accelerated primality testing program."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8,<3.13"
dependencies = [
    "cupy-cuda12x",
]

[project.optional-dependencies]
dev = [
    "sympy"
]
test = [
    "pytest"
]

[project.scripts]
prime-9000 = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
