[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "primality-tester-9000"
version = "1.0.0"
description = "A CPU/GPU-parallelized primality testing program."
authors = [{ name = "Ryan Algar", email = "me@ralgar.dev" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8,<3.13"
dependencies = [
    "cupy-cuda12x",
]

[project.optional-dependencies]
test = [
    "pytest",
    "sympy"
]

[project.scripts]
prime9k = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
